Bug 342422 - Using createRange() and then adding that range to the selection with addRange throws exception, r+sr=bzbarsky